# tina4-documentation

./: .gitignore  CLAUDE.md  README.md  SUMMARY.md  composer.json  deploy.php  index.php  loadModule.php  mkdocs.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  readme.md  requirements.txt
.claude/: launch.json
.github/ISSUE_TEMPLATE/: skill-report.yml
.github/workflows/: audit-truth.yml  link-check.yml
benchmark/: benchmark.sh
benchmark/skills/: README.md  run.py  score.py  tasks.json
custom_theme/: base.html  footer.html  main.html
custom_theme/css/: theme.css  theme_extra.css
custom_theme/partials/: header.html  nav.html
docs/: cheatsheet.md  comparisons.md  get-started.md  index.md  install-security.md  report-a-skill.md
docs/.vitepress/: config.mts
docs/IDE - Choosing your tools/: index.md
docs/code-snippets/: docker-run-php.sh  docker-run-python.sh
docs/delphi/: 01-getting-started.md  02-rest-apis.md  03-json-data-binding.md  04-html-rendering.md  05-page-navigation.md  06-templates.md  07-websockets.md  08-core-utilities.md  08-socket-server.md  09-crud-app.md  10-crud-app.md  10-integration.md  11-integration.md  12-claude-code.md  12-complete-app.md  13-complete-app.md  13-patterns.md  14-troubleshooting.md  15-troubleshooting.md  core.md  html-pages.md  html-render.md  index.md  installation.md  json-adapter.md  rest-client.md  twig.md
docs/general/: 01-what-is-tina4.md  02-architecture.md  03-choosing-your-language.md  cli.md  css.md  (+6 more)
scripts/: audit-links.py  audit-truth.py  sync-books.sh  test_audit_truth.py
(+553 files in other folders)
