[tool.poetry]
name = "tina4-documentation"
version = "0.1.0"
description = "Tina4 Documentation"
authors = ["Andre van Zuydam <andrevanzuydam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
