[tool.poetry]
name = "tina4-documentation"
version = "0.1.0"
description = "Tina4 Documentation"
authors = ["Andre van Zuydam <andrevanzuydam@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.5.50"
mkdocs-codeinclude-plugin = "^0.2.1"
pymdown-extensions = "^10.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
