[project]
name = "tina4-documentation"
version = "0.1.0"
description = "Tina4 Documentation"
authors = [{ name = "Andre van Zuydam", email = "andrevanzuydam@gmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "mkdocs-material>=9.5.50,<10",
    "mkdocs-codeinclude-plugin>=0.2.1,<0.3",
    "pymdown-extensions~=10.14",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
